# openchessvision

./: .envrc  .gitignore  README.md  build-app  flake.nix  install-service  pyproject.toml
extension/chessable-sync/: manifest.json
extension/chessable-sync/popup/: popup.html  popup.js
extension/chessable-sync/src/: background.js  boardParser.js  content.js
scripts/: .training-manager.state  generate_chessboards.py  generate_tiles.py  generate_training_data.py  process_fixtures.py  train_recognizer.py  training_manager.py
scripts/annotator/: clean_diagrams.py  organize_cleaned.py  scan_pdfs.py
src/openchessvision/: __init__.py  main.py
src/openchessvision/board/: __init__.py  chessnut.py  mock.py
src/openchessvision/core/: __init__.py  fen.py  interfaces.py  models.py
src/openchessvision/integrations/: __init__.py  chessnut_service.py
src/openchessvision/orchestrator/: __init__.py  manager.py
src/openchessvision/pdf/: __init__.py  discovery.py  reader.py
src/openchessvision/preprocessing/: __init__.py  board_detector.py
src/openchessvision/recognition/: __init__.py  classical.py  huggingface_vlm.py  linrock_cnn.py  local_cnn.py  ml.py  vision_llm.py
src/openchessvision/ui/: __init__.py  board_panel.py  main_window.py  pdf_viewer.py
src/openchessvision/ui/resources/: __init__.py
tests/: __init__.py  conftest.py  test_diagram_selection.py  test_fen.py  test_local_cnn_recognition.py  test_mock_board.py  test_richter_rogmann_position.py  test_vision_llm_recognition.py
web/: app.py  package-lock.json  package.json  tsconfig.json
web/static/css/: reader.css  style.css
web/static/js/: app.js  reader.bundle.js  reader.bundle.js.map  reader.js  stockfish-worker.js
web/static/ts/: main.ts
web/static/ts/core/: cmd.ts  invariant.ts  model.ts  msg.ts  result.ts  runtime.ts  selectors.ts  update.ts
web/static/ts/domain/chess/: analysisTree.ts  fen.ts  san.ts
web/static/ts/domain/pdf/: bbox.ts  page.ts
web/static/ts/ports/: api.ts  chessnut.ts  pdfjs.ts  stockfish.ts
web/static/ts/types/: vendor.d.ts
web/static/ts/ui/: bindings.ts  dom.ts  palette.ts  render.ts  selection.ts
web/static/ts/ui/adapters/: chessboard.ts  overlay.ts
web/templates/: index.html  reader.html
