[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "openchessvision"
version = "0.1.0"
description = "AI PDF Chess Book Reader with Chessnut Move Bluetooth Position Relay"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [
    { name = "OpenChessVision Contributors" }
]
keywords = ["chess", "pdf", "vision", "bluetooth", "chessnut"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3.12",
    "Topic :: Games/Entertainment :: Board Games",
]

dependencies = [
    # Chess logic and FEN handling
    "python-chess>=1.10.0",

    # PDF rendering
    "pymupdf>=1.24.0",

    # BLE connectivity
    "bleak>=0.22.0",

    # UI framework
    "PyQt6>=6.6.0",

    # Image processing (numpy/opencv/pillow come from nix, but we list for completeness)
    "numpy>=1.26.0",
    "pillow>=10.0.0",

    # Local CNN chess recognition
    "chessimg2pos>=0.1.0",

    # Async utilities
    "qasync>=0.27.0",
]

[project.optional-dependencies]
ml = [
    # MLX for Apple Silicon ML inference
    "mlx>=0.12.0",
    # MLX Vision Language Models (local VLM inference)
    "mlx-vlm>=0.3.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-qt>=4.4.0",
    "ruff>=0.3.0",
    "mypy>=1.9.0",
]

[project.scripts]
openchessvision = "openchessvision.main:main"

[project.gui-scripts]
openchessvision-gui = "openchessvision.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/openchessvision"]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade
]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_ignores = true
strict = true

[[tool.mypy.overrides]]
module = [
    "fitz.*",
    "bleak.*",
    "cv2.*",
    "chess.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
